--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,9 +26,9 @@ jobs:
 
       - name: Build binaries
         run: |
-          GOOS=linux GOARCH=amd64 go build -ldflags="-X 'main.Version=${{ github.event.inputs.tag_name }}' -o ryskV12-linux-amd64
-          GOOS=linux GOARCH=arm64 go build -ldflags="-X 'main.Version=${{ github.event.inputs.tag_name }}' -o ryskV12-linux-arm64
-          GOOS=darwin GOARCH=arm64 go build -ldflags="-X 'main.Version=${{ github.event.inputs.tag_name }}' -o ryskV12-darwin-arm64
+          GOOS=linux GOARCH=amd64 go build -ldflags="-X 'main.Version=${{ github.event.inputs.tag_name }}'" -o ryskV12-linux-amd64
+          GOOS=linux GOARCH=arm64 go build -ldflags="-X 'main.Version=${{ github.event.inputs.tag_name }}'" -o ryskV12-linux-arm64
+          GOOS=darwin GOARCH=arm64 go build -ldflags="-X 'main.Version=${{ github.event.inputs.tag_name }}'" -o ryskV12-darwin-arm64
 
       - name: Create release
         id: create_release
